WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254354
Custom highlight creation behind marked text should not be gated on input sources supporting live conversion only
https://bugs.webkit.org/show_bug.cgi?id=254354
Summary
Custom highlight creation behind marked text should not be gated on input sou...
Abrar Rahman Protyasha
Reported
2023-03-23 11:32:59 PDT
Custom highlight creation behind marked text should not be gated on input sources supporting live conversion only
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2023-03-23 11:33:14 PDT
rdar://107142115
Abrar Rahman Protyasha
Comment 2
2023-03-23 11:45:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/11874
EWS
Comment 3
2023-03-23 22:31:50 PDT
Committed
262060@main
(15f31bc80d50): <
https://commits.webkit.org/262060@main
> Reviewed commits have been landed. Closing PR #11874 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug