Custom highlight creation behind marked text should not be gated on input sources supporting live conversion only https://bugs.webkit.org/show_bug.cgi?id=254354 rdar://107142115

Reviewed by Wenson Hsieh.

Previously, we gated custom highlight creation with a check on the
`NSMarkedClauseSegmentAttributeName` attribute. This allowed us to honor
background color only in the case of live conversion. Since that is
no longer the case, it is undesirable to gate our behavior to the live
conversion case.

As such, we remove this attribute check and allow custom highlight
creation for other IMEs.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(compositionHighlights):

Canonical link: https://commits.webkit.org/262060@main